# surrealdb.net

./: Directory.Build.props  Directory.Packages.props  README.md  SurrealDb.sln  config.yaml  global.json  index.html  index.json  manifest.json  toc.html  xrefmap.yml
SurrealDb.Embedded.InMemory/: NativeMethods.g.cs  README.md  SurrealDb.Embedded.InMemory.csproj  SurrealDbMemoryClient.cs
SurrealDb.Embedded.Internals/: SurrealDbEmbeddedEngine.cs
SurrealDb.Embedded.RocksDb/: README.md
SurrealDb.Embedded.SurrealKv/: README.md
SurrealDb.Examples.Blazor.Server/: Program.cs  README.md
SurrealDb.Examples.Console/: Program.cs  README.md
SurrealDb.Examples.MinimalApis/: README.md
SurrealDb.Examples.TodoApi.Aot/: Program.cs  README.md  SurrealDb.Examples.TodoApi.Aot.csproj
SurrealDb.Examples.WeatherApi/: README.md
SurrealDb.MinimalApis.Extensions.Reference/: SurrealDbMinimalApisExtensions.cs
SurrealDb.Net.Benchmarks/: BaseBenchmark.cs  ColdStartBenchmark.cs  CreateBench.cs  DeleteBench.cs  Program.cs  QueryBench.cs  ScenarioBench.cs  SelectBench.cs  SurrealDb.Net.Benchmarks.csproj  UpsertBench.cs
SurrealDb.Net.Benchmarks.Embedded/: README.md
SurrealDb.Net.Benchmarks.Remote/: README.md
SurrealDb.Net.Tests/: InfoTests.cs  (+23 more)
rust-embedded/memory/: Cargo.toml  build.rs
rust-embedded/memory/src/: lib.rs
rust-embedded/memory/src/bindgen/: alloc.rs  callback.rs  csharp_to_rust.rs  free.rs  mod.rs
rust-embedded/memory/src/cbor/: mod.rs
rust-embedded/memory/src/methods/: connect.rs  create.rs  delete.rs  merge.rs  mod.rs  patch.rs  ping.rs  query.rs  select.rs  set.rs  unset.rs  update.rs  use_ns_db.rs  version.rs
rust-embedded/memory/src/models/: method.rs  mod.rs  request.rs
rust-embedded/memory/src/runtime/: db.rs  mod.rs
rust-embedded/memory/src/surrealdb/: args.rs  method.rs  mod.rs  request.rs  response.rs
rust-embedded/memory/src/surrealdb/cbor/: convert.rs  mod.rs
(+434 files in other folders)
