[package]
name = "memory"
version = "1.4.2"
edition = "2021"

[dependencies]
# TODO : remove unnecessary feature
ciborium = "0.2.1"
geo = { version = "0.27.0", features = ["use-serde"] }
geo-types = { version = "0.7.12", features = ["arbitrary"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
rust_decimal = { version = "1.33.1", features = ["maths", "serde-str"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
surrealdb = { version = "1.4.2", features = ["kv-mem", "sql2"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "js", "v4", "v7"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "surrealdb_unstable"]
